      error_description instead of setting the entire parsed error description
      string to null.

version 9.39.1 (2022-08-09)
    * Fixes NPE in TokenExchangeGrant.equals (iss #396).

version 9.40 (2022-08-09)
    * Adds JSONObjectUtils.getURL(JSONObject,String,URL) method.

version 9.41 (2022-08-11)
    * Adds OAuth2Error.INVALID_TARGET, deprecates INVALID_RESOURCE (for RFC
      8707 conformance).

version 9.41.1 (2022-08-26)
    * Updates Nimbus JOSE+JWT to 9.24.3
    * Updates optional Google Tink to 1.7.0.
    * Updates optional transitive dependencies to OpenSAML 3.x
      org.apache.santuario:xmlsec and ommons-codec:commons-codec to address
      CVEs reported by Snyk.

version 9.42 (2022-09-01)
    * Updates JWTAuthentication and JWTAuthenticationClaimsSet classes to
      support iss != sub (iss #393).
    * Updates and fixes OSGi manifest (iss #399).

version 9.43 (2022-09-03)
    * Adds dpop_jkt (DPoP JWK SHA-256 thumbprint parameter) support to
      AuthorizationRequest and AuthenticationRequest.
    * Adds nonce support to DPoPUtils and DPoPProofFactory.
    * Adds nonce support to DPoPTokenRequestVerifier and
      DPoPProtectedResourceRequestVerifier.
    * Adds DPoP-Nonce header support to HTTPResponse.
    * Adds OAuth2Error.USE_DPOP_NONCE constant.
    * Adds DPoPTokenError.USE_DPOP_NONCE constant.

version 9.43.1 (2022-09-09)
    * Updates Nimbus JOSE+JWT to 9.24.4

version 9.44 (2022-10-06)
    * Updates OIDCProviderMetadata to OpenID Connect Federation 1.0 - draft 23.
    * Adds OpenID Connect Federation 1.0 - draft 23 to
      AuthorizationServerMetadata.
    * Adds signed_jwks_uri support to ClientMetadata for OpenID Connect
      Federation 1.0 - draft 23.
    * Updates EndpointName to OpenID Connect Federation 1.0 - draft 23.
    * Updates TrustMarkClaimsSet to OpenID Connect Federation 1.0 - draft 23.
    * Updates FederationMetadataType to OpenID Connect Federation 1.0 - draft
      23.